feat/added user roles
