# src/routes/user.routes.js
@@ -5,6 +5,7 @@ const router = express.Router();
 const controller = require("../controllers/user.controller");
 const auth = require("../middleware/auth.middleware");
 const authorizeSelf = require("../middleware/authorizeSelf.middleware");
+const authorizeRole = require("../middleware/authorizeRole.middleware");
 const serviceAuth = require("../middleware/serviceAuth.middleware");
 
 // PUBLIC
@@ -15,7 +16,8 @@ router.post("/login", controller.login);
 router.get("/internal/:id/exists", serviceAuth, controller.checkUserExists);
 
 // PROTECTED
-router.get("/", auth, controller.getAllUsers);
+router.post("/admins", auth, authorizeRole("ADMIN"), controller.createAdmin);
+router.get("/", auth, authorizeRole("ADMIN"), controller.getAllUsers);
 router.get("/me", auth, controller.getCurrentUser);
 router.get("/:id/bookings", auth, authorizeSelf, controller.getUserBookings);
 router.get("/:id", auth, authorizeSelf, controller.getUser);
